--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,4 +1,8 @@
-html,
+html {
+  box-sizing: border-box;
+  height: 100%;
+}
+
 body {
   height: 100%;
 }
@@ -6,7 +10,7 @@ body {
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 .wrapper {
